--- a/aula-03/style.css
+++ b/aula-03/style.css
@@ -14,7 +14,7 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     min-height: 100vh;
     background-color: #000814e1;
@@ -52,6 +52,10 @@ h1 {
     padding: 0 20px
 }
 
+h2{
+    text-align: center;
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -64,7 +68,7 @@ main {
     grid-template-rows: 120px 120px;
     gap: 10px;
     padding: 10px;
-    margin: 25px 0;
+    margin: 15px 0;
 }
 
 .colors {
@@ -78,60 +82,77 @@ main {
 }
 
 #restart {
-    margin: 20px 0;
+    margin-top:10px;
     font-size: 32px;
     transition: transform .5s;
 }
 
 .wrong {
-    border: 4px solid var(--red);
+    border: 8px solid var(--red);
     transform: scale(.9);
 }
 
 .correct {
-    border: 4px solid var(--green);
-    transform: scale(1.3);
+    border: 8px solid var(--green);
+    transform: scale(1.2);
+}
+
+.finished {
+    background-color: #f8f7ff;
+    color: #000814;
+    padding: 0 5px;
+}
+
+.correct-color{
+    border: 8px solid orange;
+    transform: scale(1.2);
     z-index: 3;
 }
 
+.cor0 {
+    background-color: #000080d0;
+}
+
 .cor1 {
-    background-color: #ff0000;
+    background-color: #2E8B57d0;
 }
 
 .cor2 {
-    background-color: #0aff99;
+    background-color: #DAA520d0;
 }
 
 .cor3 {
-    background-color: #be0aff;
+    background-color: #8A2BE2d0;
 }
 
 .cor4 {
-    background-color: #deff0a;
+    background-color: #FA8072d0;
 }
 
 .cor5 {
-    background-color: #0aefff;
+    background-color: #FFD700d0;
 }
 
 .cor6 {
-    background-color: #f58549;
+    background-color: #FF69B4d0;
 }
 
 .cor7 {
-    background-color: #f7aef8;
+    background-color: #00BFFFd0;
 }
 
 .cor8 {
-    background-color: #2d00f7;
+    background-color: #D2691Ed0;
 }
 
 .cor9 {
-    background-color: #ffd60a;
+    background-color: #6B8E23d0;
 }
-
 .cor10 {
-    background-color: #e2eafc;
+    background-color: #144483d0;
+}
+.cor11 {
+    background-color: #c52914d0;
 }
 
 footer {
@@ -140,7 +161,7 @@ footer {
 
 @media only screen and (max-width: 660px) {
     .container {
-        grid-template-columns: repeat(3,120px);
-        grid-template-rows: repeat(4, 120px);
+        grid-template-columns: repeat(4, 80px);
+        grid-template-rows: repeat(3, 80px);
     }
 }
