--- a/aula-05/styles.css
+++ b/aula-05/styles.css
@@ -5,11 +5,11 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 html {
     font-size: 63.5%;
-    font-family: 'Titillium Web', sans-serif;
     color: #dcdcdd;
     background-color: #0d1b2a;
     overflow-x: hidden;
@@ -66,7 +66,7 @@ a:visited {
     transition: background-color .6s;
 }
 
-.header .header__menu .header__item:hover, .return-home:hover {
+.header .header__menu .header__item:hover, .return-home:hover, .add-movie:hover {
     cursor: pointer;
     background-color: #dcdcdd;
     color: #1b263b;
@@ -207,8 +207,10 @@ a:visited {
 }
 
 .movie__media__poster {
-    width: 100%;
-    object-fit: none;
+    width: auto;
+    height: 100%;
+    object-fit: contain;
+    overflow-x: hidden;
 }
 
 .movie__details {
@@ -239,6 +241,14 @@ a:visited {
 
 .movie__more__info:hover {
     cursor: pointer;
+}
+
+.add-movie {
+    padding: 5px 22px;
+    margin: 10px;
+    font-size: 1.5rem;
+    background-color: #00A651;
+    transition: background-color .6s;
 }
 
 /* personalizar a barra em geral, aqui estou definindo 10px de largura para a barra vertical e 10px de altura para a barra horizontal */
@@ -331,14 +341,14 @@ a:visited {
         display: none;
     }
     .featured-list__container .featured-list__swatch-bar {
-        height: 27.5rem;
+        height: 28.5rem;
     }
 }
 
 .modal-container {
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -349,46 +359,40 @@ a:visited {
 }
 
 .modal-box {
-    width: 600px;
-    height: 600px;
+    width: 340px;
+    height: 400px;
     display: flex;
+    align-items: center;
     flex-direction: column;
+    justify-content: space-evenly;
     background-color: #0d1b2a;
     padding: 30px;
 }
 
-.search-input {
+.modal-box h2 {
     font-size: 20px;
-    padding: 8px;
 }
 
-.result-container {
-    margin-top: 20px;
-    overflow-y: hidden;
-}
-
-.result-list {
-    list-style: none;
-    height: 100%;
-}
-
-.result-list>li {
+.modal-box form {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+}
+
+.modal-box input {
     font-size: 16px;
-    margin: 5px 0;
-    padding: 5px;
-    color: #0d1b2a;
-    background-color: #dcdcdd;
-    transition: background-color, color 0.5s
+    padding: 8px;
+    margin-bottom: 8px;
 }
 
-.result-list>li:hover {
-    cursor: pointer;
-    background-color: #0d1b2a;
-    color: #dcdcdd;
+.modal-container.display--none {
+    display: none;
+}
+.modal-container.display--flex {
+    display: flex;
 }
 
-.list-item--clicked{
-    border: 4px solid #00A651;
+#msg-error{
+    color: tomato;
+    font-size: 12px;
 }
