--- a/aula-05/styles.css
+++ b/aula-05/styles.css
@@ -66,7 +66,7 @@ a:visited {
     transition: background-color .6s;
 }
 
-.header .header__menu .header__item:hover, .return-home:hover, .add-movie:hover {
+.header .header__menu .header__item:hover, .return-home:hover, .add-movie:hover, .btn-default:hover {
     cursor: pointer;
     background-color: #dcdcdd;
     color: #1b263b;
@@ -181,7 +181,7 @@ a:visited {
 }
 
 .movies-list__movie {
-    min-width: 290px;
+    min-width: 286px;
     height: 430px;
     margin-right: 20px;
     background-color: #1b263b;
@@ -211,6 +211,10 @@ a:visited {
     height: 100%;
     object-fit: contain;
     overflow-x: hidden;
+}
+
+.movie__media__poster:hover {
+    cursor: pointer;
 }
 
 .movie__details {
@@ -243,7 +247,7 @@ a:visited {
     cursor: pointer;
 }
 
-.add-movie {
+.add-movie, .btn-default {
     padding: 5px 22px;
     margin: 10px;
     font-size: 1.5rem;
@@ -264,6 +268,98 @@ a:visited {
 
 ::-webkit-scrollbar-thumb {
     background: #00A651;
+}
+
+.modal-container {
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-box {
+    font-size: 14px;
+    width: 340px;
+    height: 480px;
+    display: none;
+    position: relative;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #0d1b2a;
+    padding: 30px;
+}
+
+#closss {
+    position: absolute;
+    font-size: 14px;
+    top: 0;
+    right: 0;
+    padding: 10px 30px;
+}
+
+#closss:hover {
+    cursor: pointer;
+}
+
+.modal-box h2 {
+    font-size: 20px;
+}
+
+.modal-box form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-box input {
+    font-size: 16px;
+    padding: 8px;
+    margin-bottom: 8px;
+}
+.modal-box input[type="submit"]{
+    margin-top: 10px;
+    align-self: center;
+}
+
+.modal-container.display--none, .modal-box.display--flex, .modal-info.display--flex {
+    display: none;
+}
+
+.modal-container.display--flex, .modal-box.display--flex, .modal-info.display--flex {
+    display: flex;
+}
+
+#msg-error {
+    color: tomato;
+    font-size: 14px;
+}
+
+.modal-info {
+    width: 720px;
+    height: 465px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px;
+    background-color: #0d1b2a;
+}
+
+.actions {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-default {
+    margin: 0;
 }
 
 @media only screen and (max-width:845px) {
@@ -294,7 +390,7 @@ a:visited {
     }
     .header .header__list--active {
         width: 150px;
-        height: 225px;
+        height: 275px;
     }
     .movie__media__poster {
         width: auto;
@@ -343,56 +439,11 @@ a:visited {
     .featured-list__container .featured-list__swatch-bar {
         height: 28.5rem;
     }
-}
 
-.modal-container {
-    width: 100%;
-    height: 100%;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 5;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.modal-box {
-    width: 340px;
-    height: 400px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-evenly;
-    background-color: #0d1b2a;
-    padding: 30px;
-}
-
-.modal-box h2 {
-    font-size: 20px;
-}
-
-.modal-box form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.modal-box input {
-    font-size: 16px;
-    padding: 8px;
-    margin-bottom: 8px;
-}
-
-.modal-container.display--none {
-    display: none;
-}
-.modal-container.display--flex {
-    display: flex;
-}
-
-#msg-error{
-    color: tomato;
-    font-size: 12px;
+    .modal-info{
+        width: 100%;
+    }
+    iframe{
+        max-width: 355px;
+    }
 }
