--- a/aula-07/style.css
+++ b/aula-07/style.css
@@ -38,16 +38,72 @@ footer {
     margin-bottom: 70px;
 }
 
+.title h1 {
+    font-size: 48px;
+    margin-top: 20px;
+}
+
 main {
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.game-state {
+    opacity: 0;
+    font-size: 48px;
+    margin-bottom: 50px;
+    transition: opacity 0.8s;
+}
+
+.game-state.active {
+    opacity: 1;
+}
+
+.player1, .player2 {
+    display: flex;
+    align-items: center;
 }
 
 .cards-container {
-    width: 800px;
+    width: auto;
     display: flex;
     justify-content: space-around;
+}
+
+.scoreboard {
+    display: grid;
+    align-items: center;
+    /* justify-content: center; */
+    gap: 5px;
+    margin: 0 5px 0 5px;
+    padding: 5px;
+    width: 110px;
+    height: 80%;
+    color: #2c2a2a;
+}
+
+.scoreboard>div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 22px;
+    background-color: #f8f7ff46;
+    border-radius: 8px;
+    font-weight: 600;
+}
+
+.scoreboard>div>p:first-child {
+    margin-top: 5px
+}
+
+.scoreboard>div>p:nth-child(2) {
+    font-size: 26px;
+    margin-bottom:5px;
 }
 
 .card {
@@ -55,6 +111,31 @@ main {
     height: 345px;
     perspective: 1000px;
     transition: 1s
+}
+
+.card-counter {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    z-index: 99;
+    font-size: 18px;
+    border-radius: 100%;
+    font-weight: 700;
+    color: #2c2a2a;
+    background-color: #f8f7ff;
+}
+
+#counter-p1{
+    top:-10px;
+    left: -10px;
+}
+#counter-p2{
+    top: -10px;
+    right: -10px;
 }
 
 .card-inner {
@@ -143,6 +224,7 @@ main {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    margin: 0 20px;
 }
 
 input {
